# nx_homework

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  conanfile.txt
hasher/: CMakeLists.txt
hasher/include/nx_homework/: hasher.hpp
hasher/include/nx_homework/hasher/detail/: api.hpp
hasher/src/: hasher.cpp
hasher/tests/: CMakeLists.txt  basic.cpp
hasher_microservice/: CMakeLists.txt
hasher_microservice/include/nx_homework/hasher_microservice/: any_handler.hpp  hex_encode.hpp  options.hpp  server.hpp  session.hpp
hasher_microservice/src/: main.cpp  options.cpp  server.cpp  session.cpp
include/nx/homework/hasher/: api.hpp  hasher.hpp
microservice/: CMakeLists.txt
microservice/include/nx/homework/hasher/microservice/: any_handler.hpp  hex_encode.hpp  options.hpp  server.hpp  session.hpp
microservice/src/: main.cpp  options.cpp  server.cpp  session.cpp
src/: hasher.cpp
